# LangSwitcher

./: Cargo.toml  README.md  build.rs  lang_config.json
installer/: installer.nsi
src/: core.rs  main.rs
