[package]
name = "lang_switcher_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"
sysinfo = "0.29.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"

widestring = "0.5"
winapi = { version = "0.3", features = ["winuser", "windef", "minwindef", "shellapi", "wingdi"] }

winit = "0.30"  
tray-icon = "0.21"          # برای system tray
