[package]
name = "lang_switcher_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.24"
sysinfo = "0.29.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
log = "0.4"
env_logger = "0.10"
open = "3.2"
widestring = "0.5"
winapi = { version = "0.3", features = ["winuser", "windef", "minwindef", "shellapi", "wingdi"] }
dirs = "5.0"

winit = "0.30"  
tray-icon = "0.21"          # برای system tray
ico = "0.3"  

[build-dependencies]
winres = "0.1"


[[bin]]
name = "lang_switcher_rust"
path = "src/main.rs"
# این خط باعث میشه که کنسول باز نشه
windows_subsystem = "windows"

[[bin]]
name = "watcher"
path = "src/bin/watcher.rs"
windows_subsystem = "windows"

